--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
-# .tmux.conf
+# ~/.tmux.conf
 # https://stuff.mit.edu/afs/athena/project/bsd/src/tmux-1.3/FAQ
 # makes Ctrl and arrow keys work on Putty
-#set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
+# set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
     
 set-option -g prefix M-z
 
@@ -37,3 +37,8 @@ bind-key -n C-Down switch-client -n
 
 bind-key -T prefix -   choose-buffer "paste-buffer -d -b '%%' "
 bind-key -T prefix +   choose-buffer "show-buffer -b '%%' "
+
+#########
+new-session -s repo 
+split-window -h 
+split-window -h 'weechat'
