--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,10 @@
 # makes Ctrl and arrow keys work on Putty
 # set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
     
-set-option -g prefix M-z
+# set-option -g prefix M-z
+set-option -g prefix C-z
+set-option -g set-titles on
+set-option -g set-titles-string "#T"
 
 set-option -g xterm-keys on 
 # set-option -g status-position top 
@@ -38,7 +41,10 @@ bind-key -n C-Down switch-client -n
 bind-key -T prefix -   choose-buffer "paste-buffer -d -b '%%' "
 bind-key -T prefix +   choose-buffer "show-buffer -b '%%' "
 
+# reload config 
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
+
 #########
-new-session -s repo 
-split-window -h 
+new-session -s snowfrs 
+split-window -h 'shell'
 split-window -h 'weechat'
