--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,8 @@
 set-option -g prefix C-z
 set-option -g set-titles on
 set-option -g set-titles-string "#T"
+# improve color
+set -g default-terminal "tmux-256color"
 
 set-option -g xterm-keys on 
 # set-option -g status-position top 
@@ -26,24 +28,40 @@ set-option -g window-status-current-style 'bg=yellow'
 
 bind-key -T prefix s choose-tree -u
 
-bind-key -n M-Up select-pane -U
-bind-key -n M-Down select-pane -D
-bind-key -n M-Left select-pane -L
-bind-key -n M-Right select-pane -R
-    
-bind-key -n C-Left select-window -p
-bind-key -n C-Right select-window -n
-
-bind-key -n C-Up switch-client -p
-bind-key -n C-Down switch-client -n
-
-
-bind-key -T prefix -   choose-buffer "paste-buffer -d -b '%%' "
-bind-key -T prefix +   choose-buffer "show-buffer -b '%%' "
-
+# bind-key -n M-Up select-pane -U
+# bind-key -n M-Down select-pane -D
+# bind-key -n M-Left select-pane -L
+# bind-key -n M-Right select-pane -R    
+# bind-key -n C-Left select-window -p
+# bind-key -n C-Right select-window -n
+# bind-key -n C-Up switch-client -p
+# bind-key -n C-Down switch-client -n
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind H resize-pane -L 10
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 10
+bind-key m set-option -g mouse on \; display 'Mouse: ON'
+bind-key M set-option -g mouse off \; display 'Mouse: OFF'
+# X clipboard integration
+#bind-key -T prefix -   choose-buffer "paste-buffer -d -b '%%' "
+#bind-key -T prefix +   choose-buffer "show-buffer -b '%%' "
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind-key -T prefix p   choose-buffer "paste-buffer -d -b '%%' "
+bind-key -T prefix C-p   choose-buffer "show-buffer -b '%%' "
+# use vim keybindings in copy mode
+setw -g mode-keys-vi
 # reload config 
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
+bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
+# Tmux Plugin Manager
+set -g @plugin 'tmux-plugins/tmp'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+run '~/.tmux/plugins/tpm/tpm'
 #########
 new-session -s snowfrs 
 split-window -h 'shell'
