--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Inconsolata 10
+font pango:Inconsolata 15
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -236,7 +236,7 @@ for_window [class="Zeal"] move position center
 exec_always libinput-gestures-setup restart
 exec_always xset r rate 200 25
 
-exec zeal
+#exec zeal
 exec safeeyes
 
 exec_always feh --bg-scale ~/.config/i3/wallpaper.png
