enable copyq clipboard manager when system start

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -238,6 +238,7 @@ exec_always xset r rate 200 25
 
 #exec zeal
 exec safeeyes
+exec_always copyq
 
 exec_always feh --bg-scale ~/.config/i3/wallpaper.png
 # exec_always ibus-daemon -drx
