--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -1,8 +1,8 @@
 # ~/.gnupg/gpg.conf
 
 #auto-key-locate keyserver
-#keyserver hkps://hkps.pool.sks-keyservers.net
-keyserver hkps://pgp.mit.edu
+keyserver hkps://hkps.pool.sks-keyservers.net
+#keyserver hkps://pgp.mit.edu
 keyserver-options no-honor-keyserver-url
 #keyserver-options ca-cert-file=/etc/sks-keyservers.netCA.pem
 #keyserver-options no-honor-keyserver-url
