--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -18,7 +18,7 @@ order += "custom_mode"
 order += "volume_status_mod"
 #order += "backlight"
 #order += "wifi_mod"
-order += "net_iplist"
+#order += "net_iplist"
 order += "sysdata"
 order += "battery_level"
 order += "date"
