--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,8 @@ set -g default-terminal "tmux-256color"
 set-option -g xterm-keys on 
 # set-option -g status-position top 
 set-option -g mouse on
+# share clipborad with vim
+set -g focus-events on
 
 set-option -g history-limit 15000
 set-option -g display-time 1500
