--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -1,7 +1,7 @@
 # ~/.gnupg/gpg.conf
 
 #auto-key-locate keyserver
-keyserver hkps://hkps.pool.sks-keyservers.net
+keyserver hkps://keys.openpgp.org
 #keyserver hkps://pgp.mit.edu
 keyserver-options no-honor-keyserver-url
 #keyserver-options ca-cert-file=/etc/sks-keyservers.netCA.pem
