update kitty configure font size and color

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -23,7 +23,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 12.0
+  font_size 12.0
 
 #: Font size (in pts)
 
@@ -460,6 +460,7 @@
 #: Color scheme {{{
 
 # foreground #dddddd
+  foreground #00a3e2
 # background #000000
 
 #: The foreground and background colors
