update kitty conf

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -75,6 +75,7 @@
 #: Cursor customization {{{
 
 # cursor #cccccc
+ cursor #ebdbb2
 
 #: Default cursor color
 
@@ -104,7 +105,7 @@
 
 #: Scrollback {{{
 
-# scrollback_lines 2000
+ scrollback_lines 100000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -148,7 +149,7 @@
 
 #: Mouse {{{
 
-# mouse_hide_wait 3.0
+ mouse_hide_wait 0
 
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
@@ -461,7 +462,7 @@
 
 # foreground #dddddd
   foreground #00a3e2
-# background #000000
+  background #282828
 
 #: The foreground and background colors
 
@@ -568,7 +569,7 @@
 #: in your shell startup scripts but system-wide, otherwise kitty will
 #: not see it.
 
-# close_on_child_death no
+ close_on_child_death yes
 
 #: Close the window when the child process (shell) exits. If no (the
 #: default), the terminal will remain open when the child exits as
@@ -578,7 +579,7 @@
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-# allow_remote_control no
+ allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
