--- a/py3status/.config/py3status/config
+++ b/py3status/.config/py3status/config
@@ -10,25 +10,25 @@ general {
 
 #order += 'usbguard'
 order += 'yubikey'
-order += 'external_script pacdiff'
+#order += 'external_script pacdiff'
 #order += 'external_script checkofficial'
 #order += 'external_script checkupdates'
 #order += 'external_script checkupdates_aur'
 #order += 'external_script checkupdates_vcs'
 #order += 'external_script checkrebuild'
-order += 'external_script checkfirmware'
-order += 'external_script new_email'
-order += 'file_status decrypted'
+#order += 'external_script checkfirmware'
+#order += 'external_script new_email'
+#order += 'file_status decrypted'
 #order += 'scratchpad_async'
-#order += 'net_rate'
-order += 'mega_sync'
-order += 'diskdata'
+order += 'net_rate'
+#order += 'mega_sync'
+#order += 'diskdata'
 order += 'group cpu'
 order += 'group ram'
 order += 'xrandr'
 order += 'group wifi'
-order += 'file_status PIA'
-order += 'whatismyip'
+#order += 'file_status PIA'
+#order += 'whatismyip'
 order += 'backlight'
 order += 'bluetooth'
 order += 'volume_status'
@@ -214,7 +214,7 @@ whatismyip {
   format = '{country_iso}'
   icon_on = '󰀈'
   icon_off = '󰀈'
-  expected = {'country_iso': 'SE'}
+  expected = {'country_iso': 'CN'}
   url_geo = 'https://whatismyip.maximbaz.com/json'
 }
 
