--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -6,8 +6,8 @@ set $mod Mod4
 font pango: Taskbar, Cantarell 13
 
 # Gaps
-gaps inner 5
-smart_gaps on
+# gaps inner 5
+# smart_gaps on
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
