--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -258,4 +258,7 @@ exec_always feh --bg-scale ~/.config/i3/wall.png
 # exec_always ibus-daemon -drx
 exec_always fcitx -dr
 #exec --no-startup-id xrandr --output DP1 --auto --primary --output HDMI1 --auto --left-of DP1
-exec_always  xrandr --output DP1 --auto --primary --output HDMI1 --auto --right-of DP1
+exec_always  xrandr --output DP-1-3 --auto --primary --output DP-1-2 --auto --right-of DP-1-3 --output eDP-1 --off
+
+# dockd (Lenovo ThinkPad Dock Management Daemon) 
+# exec --no-startup-id dockd --daemon
