--- a/fonts/.config/fontconfig/fonts.conf
+++ b/fonts/.config/fontconfig/fonts.conf
@@ -2,26 +2,30 @@
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
  <match target="font">
-  
   <edit mode="assign" name="rgba">
    <const>rgb</const>
   </edit>
-
   <edit mode="assign" name="hinting">
    <bool>true</bool>
   </edit>
-
   <edit mode="assign" name="hintstyle">
    <const>hintslight</const>
   </edit>
-
   <edit mode="assign" name="antialias">
    <bool>true</bool>
   </edit>
-
   <edit mode="assign" name="lcdfilter">
-    <const>lcddefault</const>
+   <const>lcddefault</const>
   </edit>
- 
+ </match>
+ <match target="font">
+  <edit mode="assign" name="hinting">
+   <bool>true</bool>
+  </edit>
+ </match>
+ <match target="font">
+  <edit mode="assign" name="hintstyle">
+   <const>hintslight</const>
+  </edit>
  </match>
 </fontconfig>
