--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,13 +1,16 @@
+# i3 config file (v4)
+
 # Use Windows as a modifier key
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: Taskbar, Cantarell 13
+font pango: Taskbar, Cantarell 13px
 
 # Gaps
-# gaps inner 5
-# smart_gaps on
+gaps inner 5
+smart_gaps on
+smart_borders on
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -21,8 +24,23 @@ new_window pixel 1
 new_float pixel 0
 hide_edge_borders both
 
+# Window configuration
+for_window	  [class=".*"] sticky enable, border pixel 0
+for_window    [window_role="pop-up"]         floating enable
+for_window    [class="Pinentry"]             floating enable
+for_window    [class="copyq"]                floating enable
+for_window    [class="Peek"]                 floating enable
+for_window    [class="Rofi"]                 floating enable
+for_window    [class="Chromium"]             move container to $workspace2, title_format "Chromium"
+for_window    [class="Wire"]                 move container to $workspace3
+for_window    [class="neomutt"]              move container to $workspace4
+for_window    [class="TeamViewer"]           move container to $workspace9, floating enable, sticky disable
+for_window    [class="xfreerdp"]             move container to $workspace9
+for_window    [class="nomachine"]            move container to $workspace9
+
 # Set default workspace layout
 workspace_layout tabbed
+title_align center
 
 # Color scheme (Gruvbox dark)
 set $color_normal_white  #a89984
@@ -258,7 +276,7 @@ exec_always feh --bg-scale ~/.config/i3/wall.png
 # exec_always ibus-daemon -drx
 exec_always fcitx -dr
 #exec --no-startup-id xrandr --output DP1 --auto --primary --output HDMI1 --auto --left-of DP1
-exec_always  xrandr --output DP-1-2 --auto --primary --output DP-1-3 --auto --right-of DP-1-2
+exec_always xrandr --output DP-1-2 --auto --primary --output DP-1-3 --auto --right-of DP-1-2
 
 # dockd (Lenovo ThinkPad Dock Management Daemon) 
 exec --no-startup-id dockd --daemon
