--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@
 # set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
     
 # set-option -g prefix M-z
-set-option -g prefix C-z
+# set-option -g prefix C-z
 set-option -g set-titles on
 set-option -g set-titles-string "#T"
 # improve color
@@ -49,8 +49,8 @@ bind L resize-pane -R 10
 bind-key m set-option -g mouse on \; display 'Mouse: ON'
 bind-key M set-option -g mouse off \; display 'Mouse: OFF'
 # X clipboard integration
-#bind-key -T prefix -   choose-buffer "paste-buffer -d -b '%%' "
-#bind-key -T prefix +   choose-buffer "show-buffer -b '%%' "
+# bind-key -T prefix -   choose-buffer "paste-buffer -d -b '%%' "
+# bind-key -T prefix +   choose-buffer "show-buffer -b '%%' "
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 bind-key -T prefix p   choose-buffer "paste-buffer -d -b '%%' "
 bind-key -T prefix C-p   choose-buffer "show-buffer -b '%%' "
@@ -67,4 +67,4 @@ run '~/.tmux/plugins/tpm/tpm'
 #########
 new-session -s snowfrs 
 split-window -h 'shell'
-split-window -h 'weechat'
+#split-window -h 'weechat'
