--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -2,20 +2,22 @@
 
 #auto-key-locate keyserver
 keyserver hkps://keys.openpgp.org
-#keyserver hkps://pgp.mit.edu
 keyserver-options no-honor-keyserver-url
+keyserver-options auto-key-retrieve
 #keyserver-options ca-cert-file=/etc/sks-keyservers.netCA.pem
-#keyserver-options no-honor-keyserver-url
 #keyserver-options debug
 #keyserver-options verbose
+
 cipher-algo AES256
 digest-algo SHA512
-personal-cipher-preferences AES256 AES192 AES CAST5
-personal-digest-preferences SHA512 SHA384 SHA256 SHA224
-default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
+personal-cipher-preferences AES256 AES192 AES
+personal-digest-preferences SHA512 SHA384 SHA256
+personal-compress-preferences ZLIB BZIP2 ZIP Uncompressed
+default-preference-list SHA512 SHA384 SHA256 AES256 AES192 AES ZLIB BZIP2 ZIP Uncompressed
 cert-digest-algo SHA512
-s2k-cipher-algo AES256
 s2k-digest-algo SHA512
+s2k-cipher-algo AES256
+
 charset utf-8
 fixed-list-mode
 no-comments
