--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -20,8 +20,8 @@ smart_borders on
 floating_modifier $mod
 
 # Borders
-new_window pixel 1
-new_float pixel 0
+default_border pixel 1
+default_floating_border pixel 0
 hide_edge_borders both
 
 # Window configuration
@@ -276,7 +276,5 @@ exec_always feh --bg-scale ~/.config/i3/wall.png
 # exec_always ibus-daemon -drx
 exec_always fcitx -dr
 #exec --no-startup-id xrandr --output DP1 --auto --primary --output HDMI1 --auto --left-of DP1
-exec_always xrandr --output DP-1-2 --auto --primary --output DP-1-3 --auto --right-of DP-1-2
+exec_always xrandr --output DP1-2 --auto --primary --output DP1-3 --auto --right-of DP1-2
 
-# dockd (Lenovo ThinkPad Dock Management Daemon) 
-exec --no-startup-id dockd --daemon
