--- a/transmission/.config/transmission/settings.json
+++ b/transmission/.config/transmission/settings.json
@@ -8,6 +8,7 @@
     "alt-speed-up": 50,
     "bind-address-ipv4": "0.0.0.0",
     "bind-address-ipv6": "::",
+    "blocklist-date": 0,
     "blocklist-enabled": false,
     "blocklist-updates-enabled": true,
     "blocklist-url": "http://www.example.com/blocklist",
@@ -20,6 +21,8 @@
     "download-queue-enabled": true,
     "download-queue-size": 50,
     "encryption": 1,
+    "filter-mode": "show-all",
+    "filter-trackers": "",
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
     "incomplete-dir": "/home/snowshi/Downloads",
@@ -28,24 +31,26 @@
     "lpd-enabled": false,
     "main-window-height": 636,
     "main-window-is-maximized": 0,
+    "main-window-layout-order": "menu,toolbar,filter,list,statusbar",
     "main-window-width": 1054,
-    "main-window-x": 610,
-    "main-window-y": 293,
+    "main-window-x": 228,
+    "main-window-y": 341,
     "message-level": 2,
     "open-dialog-dir": "/home/snowshi",
     "peer-congestion-algorithm": "",
     "peer-id-ttl-hours": 6,
     "peer-limit-global": 200,
     "peer-limit-per-torrent": 50,
-    "peer-port": 62940,
+    "peer-port": 54088,
     "peer-port-random-high": 65535,
     "peer-port-random-low": 49152,
     "peer-port-random-on-start": true,
-    "peer-socket-tos": "default",
+    "peer-socket-tos": 0,
     "pex-enabled": true,
     "port-forwarding-enabled": true,
     "preallocation": 1,
     "prefetch-enabled": true,
+    "prompt-before-exit": true,
     "queue-stalled-enabled": true,
     "queue-stalled-minutes": 30,
     "ratio-limit": 1.5000,
@@ -53,6 +58,12 @@
     "recent-download-dir-1": "/data",
     "recent-download-dir-2": "/home/snowshi/Music",
     "recent-download-dir-3": "/home/snowshi/Downloads",
+    "remote-session-enabled": false,
+    "remote-session-host": "localhost",
+    "remote-session-password": "",
+    "remote-session-port": 9091,
+    "remote-session-requres-authentication": false,
+    "remote-session-username": "",
     "rename-partial-files": true,
     "rpc-authentication-required": false,
     "rpc-bind-address": "0.0.0.0",
@@ -85,6 +96,7 @@
     "speed-limit-up": 100,
     "speed-limit-up-enabled": false,
     "start-added-torrents": true,
+    "start-minimized": false,
     "statusbar-stats": "total-ratio",
     "torrent-added-notification-enabled": true,
     "torrent-complete-notification-enabled": true,
